# 0.2.2
 * Created Import-Carbon script to help users properly import Carbon.
 
# 0.2.1 (28 April 2012)
 * Added IsJunction property to DirectoryInfo objects.  Returns true if a directory is a junction/reparse point.
 * Created a Carbon assembly for compiled code.  Moved P/Invoke functions from FileSystem.ps1 into assembly.  This is a backwards compatible change.
 * Created a Carbon.IO.JunctionPoint helper class for creating/removing/getting junction/reparse points.  Updated New-Junction and Remove-Junction to use the new helper class.
 * Added TargetPath property to DirectoryInfo objects.  If the directory is a junction/reparse points, returns the path to the junction's target.  Otherwise, $null.

# 0.2.0 (4 April 2012)
 
## Enhancements
  * fix issue #3: Added -Runtime switch to Invoke-PowerShell function for running PowerShell under .NET 2.0 or 4.0.  Valid values are 'v2.0' (for .NET 2) and 'v4.0' (for .NET 4).
  * **BREAKING CHANGE:** Added -Clr2 and -Clr4 switches to Set-DotNetAppSetting and Set-DotNetConnectionString functions for modifying the .NET 2 and/or 4 machine.config files.  One or both of these parameters is required.
    
## Bug fixes
  * Improved documentation for Get-ADDomainController, Get-ADUser, Format-ADSpecialCharacters, Get-Certificate, Invoke-PowerShell, Set-DotNetAppSetting, and Set-DotNetConnectionString functions.
  * fix issue #2: Get-PowerShellPath Returns Wrong Value on x86 Systems
   

# 0.1.0 (2 April 2012):
 * First packaged release.